--- a/index.html
+++ b/index.html
@@ -58,24 +58,7 @@
 
 
 
-  body::after {
-  content: "Desliza hacia abajo para navegar";
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(0,0,0,0.7);
-  color: #ebff00;
-  padding: 8px 16px;
-  border-radius: 20px;
-  font-size: 14px;
-  animation: fadeOut 3s forwards 5s;
-}
-
-@keyframes fadeOut {
-  to { opacity: 0; }
-}      
-      
+ 
 
         
 
@@ -640,7 +623,7 @@ iframe {
 
         // Create visual cue
         const cue = document.createElement('div');
-        cue.innerHTML = 'Scroll to hear sound effects';
+        cue.innerHTML = 'Desliza hacia abajo para navegar';
         cue.style.cssText = `
             position: fixed;
             bottom: 20px;
